@@ -210,7 +210,7 @@ public class WPOSActionPanel extends WPOSSubPanel
 		row = rows.newRow();
 		row.setSpans("12");
 		if (posPanel.isEnableProductLookup() && !posPanel.isVirtualKeyboard()) {
-			lookupProduct = new WPOSLookupProduct(this, fieldProductName, new Long("1"));
+			lookupProduct = new WPOSLookupProduct(this, fieldProductName, Long.valueOf("1"));
 			lookupProduct.setPriceListId(posPanel.getM_PriceList_ID());
 			lookupProduct.setPartnerId(posPanel.getC_BPartner_ID());
 			lookupProduct.setWarehouseId(posPanel.getM_Warehouse_ID());
