@@ -78,7 +78,7 @@ public class WAppsAction
        int pos = newToolTipText.indexOf('&');
        if (pos != -1  && newToolTipText.length() > pos)   //  We have a nemonic - creates ALT-_
        {
-           Character ch = new Character(newToolTipText.toLowerCase().charAt(pos + 1));
+           Character ch = Character.valueOf(newToolTipText.toLowerCase().charAt(pos + 1));
            if (ch != ' ')
            {
                // remove ampersand
